@@ -3510,4 +3510,410 @@ public class SwooshRecordGroupingTest {
         }
 
     }
+
+    @Test
+    public void testSwooshIntMatchGroup_tdq11599Smallelst() throws IOException, InterruptedException, InstantiationException,
+            IllegalAccessException, ClassNotFoundException {
+        java.util.List<java.util.List<java.util.Map<String, String>>> matchingRulesAll_tMatchGroup_1 = new java.util.ArrayList<java.util.List<java.util.Map<String, String>>>();
+        java.util.List<java.util.Map<String, String>> matcherList_tMatchGroup_1 = null;
+        java.util.Map<String, String> tmpMap_tMatchGroup_1 = null;
+
+        java.util.List<java.util.Map<String, String>> defaultSurvivorshipRules_tMatchGroup_1 = new java.util.ArrayList<java.util.Map<String, String>>();
+        java.util.Map<String, String> realSurShipMap_tMatchGroup_1 = null;
+        realSurShipMap_tMatchGroup_1 = new java.util.HashMap<String, String>();
+        realSurShipMap_tMatchGroup_1.put("PARAMETER", "");
+        realSurShipMap_tMatchGroup_1.put("SURVIVORSHIP_FUNCTION", "Smallest");
+        realSurShipMap_tMatchGroup_1.put("DATA_TYPE", "NUMBER");
+        defaultSurvivorshipRules_tMatchGroup_1.add(realSurShipMap_tMatchGroup_1);
+
+        matcherList_tMatchGroup_1 = new java.util.ArrayList<java.util.Map<String, String>>();
+        tmpMap_tMatchGroup_1 = new java.util.HashMap<String, String>();
+        tmpMap_tMatchGroup_1.put("SURVIVORSHIP_FUNCTION", "CONCATENATE");
+        tmpMap_tMatchGroup_1.put("ATTRIBUTE_THRESHOLD", "1");
+        tmpMap_tMatchGroup_1.put("PARAMETER", "");
+        tmpMap_tMatchGroup_1.put("ATTRIBUTE_NAME", "country");
+        tmpMap_tMatchGroup_1.put("COLUMN_IDX", "2");
+        tmpMap_tMatchGroup_1.put("MATCHING_TYPE", "Exact");
+        tmpMap_tMatchGroup_1.put("CONFIDENCE_WEIGHT", 1 + "");
+        tmpMap_tMatchGroup_1.put("HANDLE_NULL", "nullMatchNull");
+        tmpMap_tMatchGroup_1.put("RECORD_MATCH_THRESHOLD", 0.85 + "");
+        tmpMap_tMatchGroup_1.put("MATCHING_ALGORITHM", "TSWOOSH_MATCHER");
+        matcherList_tMatchGroup_1.add(tmpMap_tMatchGroup_1);
+        matchingRulesAll_tMatchGroup_1.add(matcherList_tMatchGroup_1);
+
+        // master rows in a group
+        final java.util.List<row2Struct> masterRows_tMatchGroup_1 = new java.util.ArrayList<row2Struct>();
+        // all rows in a group
+        final java.util.List<row2Struct> groupRows_tMatchGroup_1 = new java.util.ArrayList<row2Struct>();
+        // this Map key is MASTER GID,value is this MASTER index of all
+        // MASTERS.it will be used to get DUPLICATE GRP_QUALITY from
+        // MASTER and only in case of separate output.
+        final java.util.Map<String, Integer> indexMap_tMatchGroup_1 = new java.util.HashMap<String, Integer>();
+
+        // TDQ-9172 reuse JAVA API at here.
+        org.talend.dataquality.record.linkage.grouping.AbstractRecordGrouping<Object> recordGroupImp_tMatchGroup_1;
+        recordGroupImp_tMatchGroup_1 = new org.talend.dataquality.record.linkage.grouping.swoosh.ComponentSwooshMatchRecordGrouping() {
+
+            @Override
+            protected void outputRow(Object[] row) {
+                row2Struct outStuct_tMatchGroup_1 = new row2Struct();
+                boolean isMaster = false;
+
+                if (0 < row.length) {
+
+                    try {
+                        outStuct_tMatchGroup_1.customer_id = Integer.valueOf((String) row[0]);
+                    } catch (java.lang.NumberFormatException e) {
+                        outStuct_tMatchGroup_1.customer_id = 0;
+                    }
+                }
+
+                if (1 < row.length) {
+                    outStuct_tMatchGroup_1.city = String.valueOf(row[1]);
+                }
+
+                if (2 < row.length) {
+                    outStuct_tMatchGroup_1.country = String.valueOf(row[2]);
+                }
+
+                if (3 < row.length) {
+                    outStuct_tMatchGroup_1.GID = String.valueOf(row[3]);
+
+                }
+                // // System.out.println("--->" + outStuct_tMatchGroup_1.GID + "--" + outStuct_tMatchGroup_1.country);
+                if (4 < row.length) {
+
+                    try {
+                        outStuct_tMatchGroup_1.GRP_SIZE = Integer.valueOf((String) row[4]);
+                    } catch (java.lang.NumberFormatException e) {
+                        outStuct_tMatchGroup_1.GRP_SIZE = 0;
+                    }
+                }
+
+                if (5 < row.length) {
+                    outStuct_tMatchGroup_1.MASTER = Boolean.valueOf((String) row[5]);
+                }
+
+                if (6 < row.length) {
+
+                    try {
+                        outStuct_tMatchGroup_1.SCORE = Double.valueOf((String) row[6]);
+                    } catch (java.lang.NumberFormatException e) {
+                        outStuct_tMatchGroup_1.SCORE = null;
+                    }
+                }
+
+                if (7 < row.length) {
+
+                    try {
+                        outStuct_tMatchGroup_1.GRP_QUALITY = Double.valueOf((String) row[7]);
+                    } catch (java.lang.NumberFormatException e) {
+                        outStuct_tMatchGroup_1.GRP_QUALITY = null;
+                    }
+                }
+
+                if (outStuct_tMatchGroup_1.MASTER == true) {
+                    masterRows_tMatchGroup_1.add(outStuct_tMatchGroup_1);
+                    indexMap_tMatchGroup_1.put(String.valueOf(outStuct_tMatchGroup_1.GID), masterRows_tMatchGroup_1.size() - 1);
+                } else {
+                    groupRows_tMatchGroup_1.add(outStuct_tMatchGroup_1);
+                }
+            }
+
+            @Override
+            protected boolean isMaster(Object col) {
+                return String.valueOf(col).equals("true");
+            }
+        };
+
+        recordGroupImp_tMatchGroup_1
+                .setRecordLinkAlgorithm(org.talend.dataquality.record.linkage.constant.RecordMatcherType.T_SwooshAlgorithm);
+        // add mutch rules
+        for (java.util.List<java.util.Map<String, String>> matcherList : matchingRulesAll_tMatchGroup_1) {
+            recordGroupImp_tMatchGroup_1.addMatchRule(matcherList);
+        }
+        recordGroupImp_tMatchGroup_1.initialize();
+        // init the parameters of the tswoosh algorithm
+        java.util.Map<String, String> columnWithType_tMatchGroup_1 = new java.util.HashMap<String, String>();
+        java.util.List<java.util.List<java.util.Map<String, String>>> allRules_tMatchGroup_1 = new java.util.ArrayList<java.util.List<java.util.Map<String, String>>>();
+
+        columnWithType_tMatchGroup_1.put("customer_id", "id_Integer");
+        columnWithType_tMatchGroup_1.put("city", "id_Integer");
+        columnWithType_tMatchGroup_1.put("country", "id_String");
+        columnWithType_tMatchGroup_1.put("GID", "id_String");
+        columnWithType_tMatchGroup_1.put("GRP_SIZE", "id_Integer");
+        columnWithType_tMatchGroup_1.put("MASTER", "id_Boolean");
+        columnWithType_tMatchGroup_1.put("SCORE", "id_Double");
+        columnWithType_tMatchGroup_1.put("GRP_QUALITY", "id_Double");
+        java.util.Map<String, String> columnWithIndex_tMatchGroup_1 = new java.util.HashMap<String, String>();
+        columnWithIndex_tMatchGroup_1.put("customer_id", "0");
+        columnWithIndex_tMatchGroup_1.put("city", "1");
+        columnWithIndex_tMatchGroup_1.put("country", "2");
+        columnWithIndex_tMatchGroup_1.put("GID", "3");
+        columnWithIndex_tMatchGroup_1.put("GRP_SIZE", "4");
+        columnWithIndex_tMatchGroup_1.put("MASTER", "5");
+        columnWithIndex_tMatchGroup_1.put("SCORE", "6");
+        columnWithIndex_tMatchGroup_1.put("GRP_QUALITY", "7");
+
+        org.talend.dataquality.record.linkage.grouping.swoosh.SurvivorShipAlgorithmParams survivorShipAlgorithmParams_tMatchGroup_1 = org.talend.dataquality.record.linkage.grouping.swoosh.SurvivorshipUtils
+                .createSurvivorShipAlgorithmParams(
+                        (org.talend.dataquality.record.linkage.grouping.swoosh.AnalysisSwooshMatchRecordGrouping) recordGroupImp_tMatchGroup_1,
+                        matchingRulesAll_tMatchGroup_1, defaultSurvivorshipRules_tMatchGroup_1, columnWithType_tMatchGroup_1,
+                        columnWithIndex_tMatchGroup_1);
+        ((org.talend.dataquality.record.linkage.grouping.swoosh.AnalysisSwooshMatchRecordGrouping) recordGroupImp_tMatchGroup_1)
+                .setSurvivorShipAlgorithmParams(survivorShipAlgorithmParams_tMatchGroup_1);
+        recordGroupImp_tMatchGroup_1.setColumnDelimiter(";");
+        recordGroupImp_tMatchGroup_1.setIsOutputDistDetails(false);
+        recordGroupImp_tMatchGroup_1.setIsComputeGrpQuality(true);
+        recordGroupImp_tMatchGroup_1.setAcceptableThreshold(Float.valueOf(0.85 + ""));
+        recordGroupImp_tMatchGroup_1.setIsLinkToPrevious(false);
+        recordGroupImp_tMatchGroup_1.setOrginalInputColumnSize(3);
+        recordGroupImp_tMatchGroup_1.setIsDisplayAttLabels(false);
+        recordGroupImp_tMatchGroup_1.setIsGIDStringType("true".equals("true") ? true : false);
+
+        // read the data from the file
+        InputStream in = this.getClass().getResourceAsStream("tdq11711.txt"); //$NON-NLS-1$
+        BufferedReader bfr = new BufferedReader(new InputStreamReader(in));
+        List<String> listOfLines = IOUtils.readLines(bfr);
+        inputList = new ArrayList<String[]>();
+        for (String line : listOfLines) {
+            String[] fields = StringUtils.splitPreserveAllTokens(line, columnDelimiter);
+            inputList.add(fields);
+        }
+
+        for (String[] inputRow : inputList) { // loop on each data
+            recordGroupImp_tMatchGroup_1.doGroup(inputRow);
+        } // while
+
+        recordGroupImp_tMatchGroup_1.end();
+        groupRows_tMatchGroup_1.addAll(masterRows_tMatchGroup_1);
+
+        java.util.Collections.sort(groupRows_tMatchGroup_1, new Comparator<row2Struct>() {
+
+            @Override
+            public int compare(row2Struct row1, row2Struct row2) {
+                if (!(row1.GID).equals(row2.GID)) {
+                    return (row1.GID).compareTo(row2.GID);
+                } else {
+                    // false < true
+                    return (row2.MASTER).compareTo(row1.MASTER);
+                }
+            }
+        });
+
+        // assert
+        int n = 0;
+        for (row2Struct one : groupRows_tMatchGroup_1) {
+            if (one.getMASTER()) {
+                Assert.assertEquals("1", one.city);
+
+                break;
+            }
+            n++;
+        }
+
+    }
+
+    @Test
+    public void testSwooshIntMatchGroup_tdq11599Largest() throws IOException, InterruptedException, InstantiationException,
+            IllegalAccessException, ClassNotFoundException {
+        java.util.List<java.util.List<java.util.Map<String, String>>> matchingRulesAll_tMatchGroup_1 = new java.util.ArrayList<java.util.List<java.util.Map<String, String>>>();
+        java.util.List<java.util.Map<String, String>> matcherList_tMatchGroup_1 = null;
+        java.util.Map<String, String> tmpMap_tMatchGroup_1 = null;
+
+        java.util.List<java.util.Map<String, String>> defaultSurvivorshipRules_tMatchGroup_1 = new java.util.ArrayList<java.util.Map<String, String>>();
+        java.util.Map<String, String> realSurShipMap_tMatchGroup_1 = null;
+        realSurShipMap_tMatchGroup_1 = new java.util.HashMap<String, String>();
+        realSurShipMap_tMatchGroup_1.put("PARAMETER", "");
+        realSurShipMap_tMatchGroup_1.put("SURVIVORSHIP_FUNCTION", "Largest");
+        realSurShipMap_tMatchGroup_1.put("DATA_TYPE", "NUMBER");
+        defaultSurvivorshipRules_tMatchGroup_1.add(realSurShipMap_tMatchGroup_1);
+
+        matcherList_tMatchGroup_1 = new java.util.ArrayList<java.util.Map<String, String>>();
+        tmpMap_tMatchGroup_1 = new java.util.HashMap<String, String>();
+        tmpMap_tMatchGroup_1.put("SURVIVORSHIP_FUNCTION", "CONCATENATE");
+        tmpMap_tMatchGroup_1.put("ATTRIBUTE_THRESHOLD", "1");
+        tmpMap_tMatchGroup_1.put("PARAMETER", "");
+        tmpMap_tMatchGroup_1.put("ATTRIBUTE_NAME", "country");
+        tmpMap_tMatchGroup_1.put("COLUMN_IDX", "2");
+        tmpMap_tMatchGroup_1.put("MATCHING_TYPE", "Exact");
+        tmpMap_tMatchGroup_1.put("CONFIDENCE_WEIGHT", 1 + "");
+        tmpMap_tMatchGroup_1.put("HANDLE_NULL", "nullMatchNull");
+        tmpMap_tMatchGroup_1.put("RECORD_MATCH_THRESHOLD", 0.85 + "");
+        tmpMap_tMatchGroup_1.put("MATCHING_ALGORITHM", "TSWOOSH_MATCHER");
+        matcherList_tMatchGroup_1.add(tmpMap_tMatchGroup_1);
+        matchingRulesAll_tMatchGroup_1.add(matcherList_tMatchGroup_1);
+
+        // master rows in a group
+        final java.util.List<row2Struct> masterRows_tMatchGroup_1 = new java.util.ArrayList<row2Struct>();
+        // all rows in a group
+        final java.util.List<row2Struct> groupRows_tMatchGroup_1 = new java.util.ArrayList<row2Struct>();
+        // this Map key is MASTER GID,value is this MASTER index of all
+        // MASTERS.it will be used to get DUPLICATE GRP_QUALITY from
+        // MASTER and only in case of separate output.
+        final java.util.Map<String, Integer> indexMap_tMatchGroup_1 = new java.util.HashMap<String, Integer>();
+
+        // TDQ-9172 reuse JAVA API at here.
+        org.talend.dataquality.record.linkage.grouping.AbstractRecordGrouping<Object> recordGroupImp_tMatchGroup_1;
+        recordGroupImp_tMatchGroup_1 = new org.talend.dataquality.record.linkage.grouping.swoosh.ComponentSwooshMatchRecordGrouping() {
+
+            @Override
+            protected void outputRow(Object[] row) {
+                row2Struct outStuct_tMatchGroup_1 = new row2Struct();
+                boolean isMaster = false;
+
+                if (0 < row.length) {
+
+                    try {
+                        outStuct_tMatchGroup_1.customer_id = Integer.valueOf((String) row[0]);
+                    } catch (java.lang.NumberFormatException e) {
+                        outStuct_tMatchGroup_1.customer_id = 0;
+                    }
+                }
+
+                if (1 < row.length) {
+                    outStuct_tMatchGroup_1.city = String.valueOf(row[1]);
+                }
+
+                if (2 < row.length) {
+                    outStuct_tMatchGroup_1.country = String.valueOf(row[2]);
+                }
+
+                if (3 < row.length) {
+                    outStuct_tMatchGroup_1.GID = String.valueOf(row[3]);
+
+                }
+                // // System.out.println("--->" + outStuct_tMatchGroup_1.GID + "--" + outStuct_tMatchGroup_1.country);
+                if (4 < row.length) {
+
+                    try {
+                        outStuct_tMatchGroup_1.GRP_SIZE = Integer.valueOf((String) row[4]);
+                    } catch (java.lang.NumberFormatException e) {
+                        outStuct_tMatchGroup_1.GRP_SIZE = 0;
+                    }
+                }
+
+                if (5 < row.length) {
+                    outStuct_tMatchGroup_1.MASTER = Boolean.valueOf((String) row[5]);
+                }
+
+                if (6 < row.length) {
+
+                    try {
+                        outStuct_tMatchGroup_1.SCORE = Double.valueOf((String) row[6]);
+                    } catch (java.lang.NumberFormatException e) {
+                        outStuct_tMatchGroup_1.SCORE = null;
+                    }
+                }
+
+                if (7 < row.length) {
+
+                    try {
+                        outStuct_tMatchGroup_1.GRP_QUALITY = Double.valueOf((String) row[7]);
+                    } catch (java.lang.NumberFormatException e) {
+                        outStuct_tMatchGroup_1.GRP_QUALITY = null;
+                    }
+                }
+
+                if (outStuct_tMatchGroup_1.MASTER == true) {
+                    masterRows_tMatchGroup_1.add(outStuct_tMatchGroup_1);
+                    indexMap_tMatchGroup_1.put(String.valueOf(outStuct_tMatchGroup_1.GID), masterRows_tMatchGroup_1.size() - 1);
+                } else {
+                    groupRows_tMatchGroup_1.add(outStuct_tMatchGroup_1);
+                }
+            }
+
+            @Override
+            protected boolean isMaster(Object col) {
+                return String.valueOf(col).equals("true");
+            }
+        };
+
+        recordGroupImp_tMatchGroup_1
+                .setRecordLinkAlgorithm(org.talend.dataquality.record.linkage.constant.RecordMatcherType.T_SwooshAlgorithm);
+        // add mutch rules
+        for (java.util.List<java.util.Map<String, String>> matcherList : matchingRulesAll_tMatchGroup_1) {
+            recordGroupImp_tMatchGroup_1.addMatchRule(matcherList);
+        }
+        recordGroupImp_tMatchGroup_1.initialize();
+        // init the parameters of the tswoosh algorithm
+        java.util.Map<String, String> columnWithType_tMatchGroup_1 = new java.util.HashMap<String, String>();
+        java.util.List<java.util.List<java.util.Map<String, String>>> allRules_tMatchGroup_1 = new java.util.ArrayList<java.util.List<java.util.Map<String, String>>>();
+
+        columnWithType_tMatchGroup_1.put("customer_id", "id_Integer");
+        columnWithType_tMatchGroup_1.put("city", "id_Integer");
+        columnWithType_tMatchGroup_1.put("country", "id_String");
+        columnWithType_tMatchGroup_1.put("GID", "id_String");
+        columnWithType_tMatchGroup_1.put("GRP_SIZE", "id_Integer");
+        columnWithType_tMatchGroup_1.put("MASTER", "id_Boolean");
+        columnWithType_tMatchGroup_1.put("SCORE", "id_Double");
+        columnWithType_tMatchGroup_1.put("GRP_QUALITY", "id_Double");
+        java.util.Map<String, String> columnWithIndex_tMatchGroup_1 = new java.util.HashMap<String, String>();
+        columnWithIndex_tMatchGroup_1.put("customer_id", "0");
+        columnWithIndex_tMatchGroup_1.put("city", "1");
+        columnWithIndex_tMatchGroup_1.put("country", "2");
+        columnWithIndex_tMatchGroup_1.put("GID", "3");
+        columnWithIndex_tMatchGroup_1.put("GRP_SIZE", "4");
+        columnWithIndex_tMatchGroup_1.put("MASTER", "5");
+        columnWithIndex_tMatchGroup_1.put("SCORE", "6");
+        columnWithIndex_tMatchGroup_1.put("GRP_QUALITY", "7");
+
+        org.talend.dataquality.record.linkage.grouping.swoosh.SurvivorShipAlgorithmParams survivorShipAlgorithmParams_tMatchGroup_1 = org.talend.dataquality.record.linkage.grouping.swoosh.SurvivorshipUtils
+                .createSurvivorShipAlgorithmParams(
+                        (org.talend.dataquality.record.linkage.grouping.swoosh.AnalysisSwooshMatchRecordGrouping) recordGroupImp_tMatchGroup_1,
+                        matchingRulesAll_tMatchGroup_1, defaultSurvivorshipRules_tMatchGroup_1, columnWithType_tMatchGroup_1,
+                        columnWithIndex_tMatchGroup_1);
+        ((org.talend.dataquality.record.linkage.grouping.swoosh.AnalysisSwooshMatchRecordGrouping) recordGroupImp_tMatchGroup_1)
+                .setSurvivorShipAlgorithmParams(survivorShipAlgorithmParams_tMatchGroup_1);
+        recordGroupImp_tMatchGroup_1.setColumnDelimiter(";");
+        recordGroupImp_tMatchGroup_1.setIsOutputDistDetails(false);
+        recordGroupImp_tMatchGroup_1.setIsComputeGrpQuality(true);
+        recordGroupImp_tMatchGroup_1.setAcceptableThreshold(Float.valueOf(0.85 + ""));
+        recordGroupImp_tMatchGroup_1.setIsLinkToPrevious(false);
+        recordGroupImp_tMatchGroup_1.setOrginalInputColumnSize(3);
+        recordGroupImp_tMatchGroup_1.setIsDisplayAttLabels(false);
+        recordGroupImp_tMatchGroup_1.setIsGIDStringType("true".equals("true") ? true : false);
+
+        // read the data from the file
+        InputStream in = this.getClass().getResourceAsStream("tdq11711.txt"); //$NON-NLS-1$
+        BufferedReader bfr = new BufferedReader(new InputStreamReader(in));
+        List<String> listOfLines = IOUtils.readLines(bfr);
+        inputList = new ArrayList<String[]>();
+        for (String line : listOfLines) {
+            String[] fields = StringUtils.splitPreserveAllTokens(line, columnDelimiter);
+            inputList.add(fields);
+        }
+
+        for (String[] inputRow : inputList) { // loop on each data
+            recordGroupImp_tMatchGroup_1.doGroup(inputRow);
+        } // while
+
+        recordGroupImp_tMatchGroup_1.end();
+        groupRows_tMatchGroup_1.addAll(masterRows_tMatchGroup_1);
+
+        java.util.Collections.sort(groupRows_tMatchGroup_1, new Comparator<row2Struct>() {
+
+            @Override
+            public int compare(row2Struct row1, row2Struct row2) {
+                if (!(row1.GID).equals(row2.GID)) {
+                    return (row1.GID).compareTo(row2.GID);
+                } else {
+                    // false < true
+                    return (row2.MASTER).compareTo(row1.MASTER);
+                }
+            }
+        });
+
+        // assert
+        int n = 0;
+        for (row2Struct one : groupRows_tMatchGroup_1) {
+            if (one.getMASTER()) {
+                Assert.assertEquals("12", one.city);
+
+                break;
+            }
+            n++;
+        }
+
+    }
 }
